--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Run front-end tests
+          name: Run Packages Audit on Frontend
           command: |
             cd frontend
             npm install
@@ -118,11 +118,12 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Run back-end tests
+          name: Run Packages Audit on Backend
           command: |
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
+            npm audit fix --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
