All Jobs done, debugging next

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: "install Typescript"
   become: true
   npm:
-    name: typescriptgit
+    name: typescript
     global: true
     production: true
     state: present
