--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,7 +215,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-                curl https://kvdb.io/EvmgEiSgWX57a1WqWkNBzW/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                curl --insecure https://kvdb.io/EvmgEiSgWX57a1WqWkNBzW/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       - destroy-environment:
           stackid: "${CIRCLE_WORKFLOW_ID:0:7}"      
@@ -259,7 +259,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.10.5-alpine3.8
+      - image: python:3.10.5-alpine3.16
     steps:
       # Checkout code from git
       # Add ssh keys with fingerprint
@@ -277,6 +277,7 @@ jobs:
             apk add --update ansible
             apk add --update nodejs=circleci/node:13.8.0
             apk add --update npm
+            apk add --update aws-cli
 
       - run:
           name: Deploy backend
@@ -299,14 +300,14 @@ jobs:
   smoke-test:
     docker:
       # Lightweight Docker image
-      - image: alpine:latest
+      - image: amazon/aws-cli
     steps:
       # Checkout code from git
       - run:
           name: Install dependencies
           command: |
             # your code here
-            apk add --update curl
+            yum -y install --update curl
       - run:
           name: Get backend url
           command: |
