--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: "copy files over to instance"
   copy:
-    src: artifact.tar.gz
+    src: ~/project/artifact.tar.gz
     dest: ~/tmp/artifact.tar.gz
     backup: yes
 
@@ -29,8 +29,7 @@
 - name: "start backend with pm2"
   become: true
   command: |
-    cd ~/web/backend
     npm install
     pm2 stop default
-    pm2 start ~/web/backend/dist/src/main.js --name default
+    pm2 start -- start
 
