--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,10 +231,9 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            yum-config-manager --enable rhel-server-rhscl-7-rpms
-            yum -y install tar gzip
-            yum install rh-nodejs12
-            scl enable rh-nodejs12 bash
+            yum install -y tar gzip curl
+            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+            yum install -y nodejs
       - run:
           name: Get backend url
           command: |
@@ -275,9 +274,19 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
+            apk add curl
             apk add --update ansible
-            apk add --update nodejs=13.8.0
-            apk add --update aws-cli
+            
+            # aws-cli
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
+            # nodejs
+            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+            sudo apt install -y nodejs
+            sudo npm install --global n
+            sudo n 13.8.0
 
       - run:
           name: Deploy backend
@@ -353,7 +362,9 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            yum -y install tar gzip
+            yum install -y tar gzip curl
+            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+            yum install -y nodejs
       - run:
           name: Update cloudfront distribution
           command: |
