--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,6 +186,7 @@ jobs:
           command: |
             # Your code here
             apk add --update ansible
+            pip install awscliv
       - run:
           name: Configure server
           command: |
@@ -239,7 +240,7 @@ jobs:
           name: Get backend url
           command: |
             # your code here
-            export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress')
+            export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -274,20 +275,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # your code here
-            apk add curl
-            apk add --update ansible
-            
-            # aws-cli
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            ./aws/install
-
-            # nodejs
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-            apt install -y nodejs
-            npm install --global n
-            n 13.8.0
+            apk add --update ansible curl rsync openssh nodejs npm
+            ansible --version
+            pip install awscli
+            aws --version
 
       - run:
           name: Deploy backend
