--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
           command: |
             # Your code here
             apk add --update ansible
-            pip install awscliv
+            pip install awscli
       - run:
           name: Configure server
           command: |
