--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -21,10 +21,16 @@
   command: |
     apt-get install tar gzip -y
 
-- name: "extract backend file"
+# - name: "extract backend file"
+#   become: true
+#   command: |
+#     tar -xzvf ~/tmp/artifact.tar.gz -C ~/web/
+
+- name: "Extract Artifact"
   become: true
-  command: |
-    tar -xzvf ~/tmp/artifact.tar.gz -C ~/web
+  unarchive:
+    src: ~/tmp/artifact.tar.gz
+    dest: ~/web/
 
 - name: "start backend with pm2"
   become: true
@@ -32,4 +38,15 @@
     npm install
     pm2 stop default
     pm2 start -- start
+  environment:
+    ENVIRONMENT: production
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+    TYPEORM_MIGRATIONS_DIR: "./migrations"
+    TYPEORM_MIGRATIONS: "./migrations/*.js"
+    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
 
