--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,36 +1,31 @@
-- name: "create directory"
-  file:
-    path: ~/tmp
-    mode: 0755
-    state: directory
 
 - name: "create directory"
   file:
     path: ~/web
-    mode: 0755
+    mode: 0777
     state: directory
+    owner: ubuntu
+    group: ubuntu
 
 - name: "copy files over to instance"
   copy:
     src: ~/project/artifact.tar.gz
-    dest: ~/tmp/artifact.tar.gz
-    backup: yes
+    dest: ~/web/artifact.tar.gz
 
 - name: "install tar and gzip"
   become: true
   command: |
     apt-get install tar gzip -y
 
-# - name: "extract backend file"
-#   become: true
-#   command: |
-#     tar -xzvf ~/tmp/artifact.tar.gz -C ~/web/
-
-- name: "Extract Artifact"
+- name: "Check for tar file"
   become: true
-  unarchive:
-    src: ~/tmp/artifact.tar.gz
-    dest: ~/web/
+  command: ls -l ~/web
+
+- name: "extract backend file"
+  become: true
+  command: |
+    tar -xzvf ~/web/artifact.tar.gz
+    rm -rf ~/web/artifact.tar.gz
 
 - name: "start backend with pm2"
   become: true
@@ -38,15 +33,5 @@
     npm install
     pm2 stop default
     pm2 start -- start
-  environment:
-    ENVIRONMENT: production
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    TYPEORM_MIGRATIONS_DIR: "./migrations"
-    TYPEORM_MIGRATIONS: "./migrations/*.js"
-    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
-    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+  
 
