--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,40 +1,78 @@
 
-- name: "create directory"
-  file:
-    path: ~/web
-    mode: 0777
-    state: directory
-    owner: ubuntu
-    group: ubuntu
+# - name: "create directory"
+#   file:
+#     path: ~/web
+#     mode: 0777
+#     state: directory
+#     owner: ubuntu
+#     group: ubuntu
 
-- name: "copy files over to instance"
-  copy:
-    src: ~/project/artifact.tar.gz
-    dest: ~/web/artifact.tar.gz
-    owner: ubuntu
-    group: ubuntu
-    mode: 0777
+# - name: "copy files over to instance"
+#   copy:
+#     src: ~/project/artifact.tar.gz
+#     dest: ~/web/artifact.tar.gz
+#     owner: ubuntu
+#     group: ubuntu
+#     mode: 0777
 
-- name: "install tar and gzip"
+# - name: "install tar and gzip"
+#   become: true
+#   command: |
+#     apt-get install tar gzip -y
+
+# # - name: "Check for tar file"
+# #   become: true
+# #   command: ls -l ~/web
+
+# - name: "extract backend file"
+#   become: true
+#   command: |
+#     tar -xzvf ~/web/artifact.tar.gz
+#     rm -rf ~/web/artifact.tar.gz
+
+# - name: "start backend with pm2"
+#   become: true
+#   command: |
+#     npm install
+#     pm2 stop default
+#     pm2 start -- start
+- name: "show remote environment"
+  shell: env
+
+- name: "copy backend binaries"
   become: true
-  command: |
-    apt-get install tar gzip -y
+  synchronize:
+    src: ../../backend/dist
+    dest: /home/ubuntu/mode_app
+    recursive: true
 
-- name: "Check for tar file"
+- name: "copy node_modules"
   become: true
-  command: ls -l ~/web
+  synchronize:
+    src: ../../backend/node_modules
+    dest: /home/ubuntu/node_app
+    recursive: true
 
-- name: "extract backend file"
+- name: "delete anything that might already be running"
   become: true
-  command: |
-    tar -xzvf ~/web/artifact.tar.gz
-    rm -rf ~/web/artifact.tar.gz
+  command: pm2 delete all
+  ignore_errors: true
 
-- name: "start backend with pm2"
+- name: "start server"
   become: true
-  command: |
-    npm install
-    pm2 stop default
-    pm2 start -- start
+  command: pm2 start -f ./main.js
+  args:
+    chdir: /home/ubuntu/node_app/dist
+  environment:
+     ENVIRONMENT: production
+     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+     TYPEORM_MIGRATIONS_DIR: "./migrations"
+     TYPEORM_MIGRATIONS: "./migrations/*.js"
+     TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+     TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
   
 
