--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -49,35 +49,35 @@
 #     src: ../../backend/node_modules
 #     dest: /home/ubuntu/node_app
 #     recursive: true
-- name: "install dependencies."
-  become: true
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
+# - name: "install dependencies."
+#   become: true
+#   apt:
+#     name: ["nodejs", "npm"]
+#     state: latest
+#     update_cache: yes
 
-- name: "install Typescript"
-  become: true
-  npm:
-    name: typescript
-    global: true
-    production: true
-    state: present
+# - name: "install Typescript"
+#   become: true
+#   npm:
+#     name: typescript
+#     global: true
+#     production: true
+#     state: present
 
-- name: "install pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+# - name: "install pm2"
+#   become: true
+#   npm:
+#     name: pm2
+#     global: yes
+#     production: yes
+#     state: present
 
 - name: "Extract Artifact"
-  become: yes
+  become: true
   unarchive:
         src: files/artifact.tar.gz
         dest: ~/
-        
+
 - name: "start server"
   become: true
   shell: | 
