--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
           command: |
             # Your code here
             cd .circleci/ansible
-            ansible-playbook -i .circleci/ansible/inventory.txt configure-server.yml
+            ansible-playbook -i inventory.txt configure-server.yml
 #       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           stackid: "${CIRCLE_WORKFLOW_ID:0:7}"      
