--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,7 +322,10 @@ jobs:
           name: Backend smoke test.
           command: |
             # your code here
-            if curl "${API_URL}/api/status" | grep "ok"
+            export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl -s "${API_URL}/api/status" | grep "ok"
             then
                 return 0
             else
