--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,9 +344,9 @@ jobs:
             else
               return 1
             fi
-      - destroy-environment:
-          stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations
+      # - destroy-environment:
+      #     stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      # - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   cloudfront-update:
