--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,9 +295,9 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
-          stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations
+      # - destroy-environment:
+      #     stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      # - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   smoke-test:
@@ -436,9 +436,9 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
