--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -5,14 +5,14 @@
 - name: "Create Directory"
   become: true
   file:
-    path: ~/web
+    path: /home/ubuntu/web
     state: directory
 
 - name: "Copy Files"
   become: true
   copy:
-    path: artifact.tar.gz
-    dest: ~/web/artifact.tar.gz
+    src: artifact.tar.gz
+    dest: /home/ubuntu/web/artifact.tar.gz
     
 # - name: "Extract Artifact"
 #   become: true
