--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -19,9 +19,10 @@
 - name: "Extract Artifact"
   become: true
   command: |
-    sudo tar xvzf /home/ubuntu/web/artifact.tar.gz
+    cd /home/ubuntu/web
+    sudo tar xvzf artifact.tar.gz
 
-- name: "start server"
+- name: "test application"
   become: true
   environment:
      ENVIRONMENT: production
@@ -37,8 +38,28 @@
   shell: | 
     cd /home/ubuntu/web/dist
     sudo npm install
-    pm2 stop default
+    node main.js
+
+- name: "start server"
+  become: true
+  args:
+    chdir: /home/ubuntu/web
+  environment:
+     ENVIRONMENT: production
+     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+     TYPEORM_MIGRATIONS_DIR: "./migrations"
+     TYPEORM_MIGRATIONS: "./migrations/*.js"
+     TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+     TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+  shell: | 
+    cd /home/ubuntu/web/dist
+    sudo npm install
+    sudo pm2 stop default
     # pm2 start npm -- start
-    pm2 start main.js --name default
+    sudo pm2 start main.js --name default
   
 
