--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,7 +283,7 @@ jobs:
           name: Deploy backend
           command: |
             echo NODE_ENV=production > ~/project/backend/.env
-            echo VERSION: "1" >> ~/project/backend/.env
+            echo VERSION=1 >> ~/project/backend/.env
             echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
             echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env 
             echo TYPEORM_HOST=$TYPEORM_HOST >> ~/project/backend/.env 
