--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,9 +338,9 @@ jobs:
             export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if curl -s "${API_URL}/api/status" | grep "ok"
+            if curl "${API_URL}/api/status" | grep "ok"
             then
-              exit 0 
+              echo 0 
             else
               exit 1
             fi
@@ -350,16 +350,16 @@ jobs:
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
+            if curl ${URL} | grep "Welcome"
             then
                 # Change this to 0 after the job fails
               return 1
             else
               return 1
             fi
-      - destroy-environment:
-          stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations
+      # - destroy-environment:
+      #     stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      # - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   cloudfront-update:
