--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -9,7 +9,7 @@
   apt:
     name: ["nodejs", "npm"]
     state: latest
-    update_cache: yes
+    # update_cache: yes
 
 - name: "install pm2"
   become: true
